<resources>
    <string name="app_name">Fortium</string>
    <string name="registro">Registro</string>
    <string name="fortium">Fortium</string>
    <string name="welcome_texto1">Bienvenido a tu</string>
    <string name="welcome_texto2">Máximo rendimiento.</string>
    <string name="welcome_texto3">Vamos a crear tu perfil para seguir tu camino de fuerza.</string>
    <string name="welcome_bonton_texto_crear">Crear mi perfil</string>
    <string name="welcome_boton_texto_importar">Importar datos</string>
    <string name="crearPerfil_titulo">Crear perfil</string>
    <string name="crearPerfil_pasos">Paso 1 de 2</string>
    <string name="crearPerfil_porcentaje">50%</string>
    <string name="crearPerfil_nombre_campo_nombre">Nombre</string>
    <string name="crearPerfil_hint_introducir_nombre">Introduce tu nombre</string>
    <string name="crearPerfil_nombre_campo_apellido">Apellidos</string>
    <string name="crearPerfil_hint_campo_apellido">Introduce tus apellidos</string>
    <string name="crearPerfil_nombre_campo_fecha">Fecha de nacimiento</string>
    <string name="crearPerfil_nombre_campo_genero">Género</string>
    <string name="crearPerfil_nombre_toggle_masculino">Masculino</string>
    <string name="crearPerfil_nombre_toggle_feminino">Femenino</string>
    <string name="crearPerfil_nombre_toggle_otros">Otros</string>
    <string name="crearPerfil_nombre_campo_peso">Peso actual</string>
    <string name="crearPerfil_nombre_toggle_kg">KG</string>
    <string name="crearPerfil_nombre_toggle_lb">LB</string>
    <string name="crearPerfil_hint_campo_peso">E.g. 70</string>
    <string name="crearPerfil_nombre_campo_altura">Altura</string>
    <string name="crearPerfil_hint_campo_altura">E.g. 180</string>
    <string name="crearPerfil_boton_guardar_continuar">Guardar y Continuar</string>
    <string name="navMenu_opcion1">Casa</string>
    <string name="navMenu_opcion2">Rutinas</string>
    <string name="navMenu_opcion3">Ejercicios</string>
    <string name="navMenu_opcion4">Estadísticas</string>
    <string name="main_texto_empezar">¿Listo para arrasar?</string>
    <string name="main_texto_volumen_semanal">Volumen semanal</string>
    <string name="main_texto_ej_volumne_semanal">0 kg</string>
    <string name="main_texto_rm">Sentadilla e1RM</string>
    <string name="main_texto_ej_rm">0 kg</string>
    <string name="main_boton_texto_empezar_ejercicio">Empezar entrenamiento</string>
    <string name="main_texto_rutinas">Mi rutinas</string>
    <string name="main_funcion_texto_ver_todas">Ver todas</string>
    <string name="rutinaDetalle_tv_gestionar">Gestionar Rutina</string>
    <string name="rutinaDetalle_tv_estructura">Estructura</string>
    <string name="rutinaDetalle_boton_tv_add">Añadir ejercicios</string>
    <string name="rutinaDetalle_tv_reordenar">Reordenar</string>
    <string name="fragmentRutina_tv_titulo">Mi biblioteca</string>
    <string name="fragmentRutina_tv_buscar">Buscar rutinas...</string>
    <string name="fragmentRutina_tv_importar">Importar JSON</string>
    <string name="fragmentRutina_tv_vacio">Tu biblioteca esta vacía. Comienza tu camino creando una rutina.</string>
    <string name="fragmentRutina_tv_crear">Crear Rutina</string>
    <string name="dialogCrearRutina_boton_crear">Crear</string>
    <string name="dialogCrearRutina_boton_cancelar">Cancelar</string>
    <string name="dialogCrearRutina_tiet_descripcion">Descripcion (opcional)</string>
    <string name="dialogCrearRutina_tiet_nombre">Nombre de la rutina (e.g. Dia de pierna)</string>
    <string name="dialogCrearRutina_tv_titulo">Nueva rutina</string>
    <string name="dialogConfigureExcersice_tv_titulo">Configurar Ejercicio</string>
    <string name="dialogConfigureExcersice_tiet_series">Nº Series</string>
    <string name="dialogConfigureExcersice_tiet_reps">Reps. Objetivo</string>
    <string name="dialogConfigureExcersice_btn_add">Añadir a Rutina</string>
    <string name="dialogConfigureExcersice_boton_cancelar">Cancelar</string>
    <string name="workoutSetRow_et_kg">kg</string>
    <string name="workoutSetRow_et_reps">reps</string>
    <string name="workout_boton_finalizar">Finalizar</string>
    <string name="workout_boton_add">+ Añadir Ejercicio</string>
    <string name="workoutActive_tv_add">+ Añadir Serie</string>
    <string name="workoutActiveExcersice_tv_set">Set</string>
    <string name="workoutActiveExcersice_tv_anterior">Anterior</string>
    <string name="workoutActiveExcersice_tv_kg">kg</string>
    <string name="workoutActiveExcersice_tv_reps">Reps</string>
    <string name="workoutActiveExcersice_tv_rpe">RPE</string>
    <string name="workoutSetRow_et_rpe">-</string>
    <string name="sheetRestTimer_boton_saltar">Saltar</string>
    <string name="sheetRestTimer_boton_mas15">+ 15s</string>
    <string name="sheetRestTimer_boton_menos15">- 15s</string>
    <string name="sheetRestTimer_tv_titulo">Tiempo de Descanso</string>
    <string name="bottomSheetExerciseFilters_tv_titulo">Filtros</string>
    <string name="bottomSheetExerciseFilters_tv_limpiar">Limpiar</string>
    <string name="bottomSheetExerciseFilters_tv_grupos">GRUPO MUSCULAR</string>
    <string name="bottomSheetExerciseFilters_tv_pecho">Pecho</string>
    <string name="bottomSheetExerciseFilters_tv_espalda">Espalda</string>
    <string name="bottomSheetExerciseFilters_tv_quads">Cuadriceps</string>
    <string name="bottomSheetExerciseFilters_tv_isquio">Isquiotibiales</string>
    <string name="bottomSheetExerciseFilters_tv_gemelos">Gemelos</string>
    <string name="bottomSheetExerciseFilters_tv_hombros">Hombros</string>
    <string name="bottomSheetExerciseFilters_tv_biceps">Biceps</string>
    <string name="bottomSheetExerciseFilters_tv_triceps">Triceps</string>
    <string name="bottomSheetExerciseFilters_tv_antebrazo">Antebrazo</string>
    <string name="bottomSheetExerciseFilters_tv_abs">Abdominales</string>
    <string name="bottomSheetExerciseFilters_tv_gluteos">Gluteos</string>
    <string name="bottomSheetExerciseFilters_tv_resultados">Mostrar Resultados</string>
    <string name="fragmentExcersieList_boton_tv_add">Nuevo</string>
    <string name="fragmentExcersieList_tv_buscar">Buscar ejercicio...</string>
    <string name="bottomSheetCreateExcersice_tv_titulo">Crear Ejercicio Propio</string>
    <string name="bottomSheetCreateExcersice_til_nombre">Nombre del ejercicio</string>
    <string name="bottomSheetCreateExcersice_til_grupoMuscular">Grupo Muscular</string>
    <string name="bottomSheetCreateExcersice_boton_guardar">Guardar Ejercicio</string>
    <string name="exerciseForm_boton_cambiar_foto">Cambiar GIF/Foto</string>
    <string name="exerciseForm_til_nombre">Nombre</string>
    <string name="exerciseForm_til_grupo_muscular">Grupo Muscular</string>
    <string name="exerciseForm_til_equipo">Equipo</string>
    <string name="exerciseForm_boton_guardar">Guardar Ejercicio</string>
    <string name="exerciseForm_boton_eliminar">Eliminar Ejercicio</string>
    <string name="fragmentStatistics_tv_titulo">Dashboard de Progreso</string>
    <string name="fragmentStatistics_tv_fuerza">Evolución de Fuerza</string>
    <string name="fragmentStatistics_til_ejercicio">Selecciona un ejercicio</string>
    <string name="fragmentStatistics_tv_volumen">Volumen Total</string>
    <string name="fragmentStatistics_tv_series">Series de los ultimos 30 días</string>
    <string name="main_tv_entrenamientos">Últimos Entrenamientos</string>
    <string name="main_tv_vertodos">Ver todos</string>
    <string name="activitySettings_tv_subti1">Perfil Físico (Para cálculos de 1RM)</string>
    <string name="activitySettings_tv_subti2">Datos y Copias de Seguridad</string>
    <string name="activitySettings_til_hint_peso">Peso</string>
    <string name="activitySettings_til_hint_altura">Altura (m)</string>
    <string name="activitySettings_til_hint_edad">Edad</string>
    <string name="activitySettings_til_hint_genero">Género</string>
    <string name="activitySettings_boton_guardar">Guardar Perfil</string>
    <string name="activitySettings_boton_exportar">Exportar Datos (JSON)</string>
    <string name="activitySettings_boton_importar">Importar Datos (JSON)</string>
    <string name="workout_tv_volumen">VOLUMEN TOTAL</string>
    <string name="workout_tv_series">SERIES TOTALES</string>
    <string name="workout_til_notas">Notas del entrenamiento (Opcional)</string>
    <string name="main_tv_no_sesiones">No hay entrenamientos aún</string>
    <string name="main_tv_no_rutinas">No hay rutinas aún</string>
    <string name="titulo_historial_completo">Historial de Sesiones</string>
    <string name="no_hay_entrenamientos">Aún no has registrado sesiones</string>
    <string name="detalleEjercicio_tv_series">SERIES</string>
    <string name="detalleEjercicio_tv_reps">REPS</string>
    <string name="detalleEjercicio_tv_kg">KG</string>
    <string name="detallesSesion_tv_fecha">FECHA</string>
    <string name="detallesSesion_tv_tiempo">TIEMPO / INICIO</string>
    <string name="detallesSesion_tv_volumen">VOLUMEN TOTAL</string>
    <string name="detallesSesion_tv_series">SERIES TOTALES</string>
    <string name="detallesSesion_tv_notas">Notas del entrenamiento</string>
    <string name="detallesSesion_tv_ejercicios">Ejercicios Realizados</string>
    <string name="activitySettings_tv_copia">Copia de seguridad semanal</string>
    <string name="activitySettings_tv_copia2">Realizar backup automático cada 7 días</string>
    <string name="workoutActiveExcersice_tv_notas">Añadir notas del ejercicio...</string>
    <string name="legal_notice_title">Aviso Legal y Política de Privacidad: Fortium</string>
</resources>