<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/gray_800"
    android:orientation="vertical"
    android:padding="24dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/bottomSheetExerciseFilters_tv_titulo"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnClearFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:background="?attr/selectableItemBackground"
            android:padding="8dp"
            android:text="@string/bottomSheetExerciseFilters_tv_limpiar"
            android:textColor="@color/blue_400"
            android:textSize="14sp" />
    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bottomSheetExerciseFilters_tv_grupos"
        android:textColor="@color/gray_400"
        android:textSize="12sp"
        android:textStyle="bold" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroupFilterMuscle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_pecho" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_espalda" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_quads" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_isquio" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_gemelos" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_hombros" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_biceps" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_triceps" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_antebrazo" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_abs" />

        <com.google.android.material.chip.Chip
            style="@style/Widget.Material3.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bottomSheetExerciseFilters_tv_gluteos" />


    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnApplyFilters"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="32dp"
        android:textColor="@color/white"
        android:text="@string/bottomSheetExerciseFilters_tv_resultados"
        android:backgroundTint="@color/blue_400"
        app:cornerRadius="12dp" />

</LinearLayout>