<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/gray_800"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sheetRestTimer_tv_titulo"
        android:textColor="@color/gray_400"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvRestTimerBig"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        tools:text="01:30"
        android:textColor="@color/blue_400"
        android:textSize="48sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLess15s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheetRestTimer_boton_menos15"
            app:backgroundTint="@color/white_alpha_20"
            android:textColor="@color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSkipRest"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/sheetRestTimer_boton_saltar"
            android:textColor="@color/white"
            app:strokeColor="@color/gray_400" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAdd15s"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sheetRestTimer_boton_mas15"
            app:backgroundTint="@color/white_alpha_20"
            android:textColor="@color/white" />


    </LinearLayout>
</LinearLayout>